Merged uckelman-work@4894. * Switched all remaining Integer(String) to Integer.valueOf(String). * Switched all remaining Double(String) to Double.valueOf(String). * Use autoboxing instead of Integer(int) and Double(double).
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@4896 67b53d14-2c14-4ace-a08f-0dab2b34000c