@@ -186,7 +186,7 @@ public class PanelWidget extends Widget {
     }
     else if (COLS.equals(name)) {
       if (value instanceof String) {
-        value = new Integer((String) value);
+        value = Integer.valueOf((String) value);
       }
       nColumns = ((Integer) value).intValue();
     }
